--- a/lightblog-web/src/main/webapp/css/page_work_detail.css
+++ b/lightblog-web/src/main/webapp/css/page_work_detail.css
@@ -18,7 +18,7 @@
 
 #toc_togggle {
 	position: fixed;
-	bottom: 72px;
+	bottom: 99px;
 	right: 37px;
 	border: 1px solid #000000;
 	padding: 0 3px;
@@ -40,7 +40,7 @@
 
 #container_work {
 	padding-top: 30px;
-	width: 80%;
+/*	width: 80%;*/
 }
 
 #content_article {
@@ -82,3 +82,7 @@
 	background-color: black;
 	color: #FFFFFF;
 }
+
+
+
+
